<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mainViewModel"
            type="com.metals.precious.app.viewModels.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">

        <TextView
            android:id="@+id/dTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            android:text="@string/year_month"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:padding="@dimen/halfMargin"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/aMargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dTitle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/month"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/monthPicker"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:theme="@style/NumberPickerTheme"
                android:value="@{Integer.valueOf(mainViewModel.period[0])}"/>

            <NumberPicker
                android:id="@+id/yearPicker"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:theme="@style/NumberPickerTheme"
                android:value="@{Integer.valueOf(mainViewModel.period[1])}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/year"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/okBtn"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ok"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginVertical="@dimen/aMargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>